--- a/src/Component/Selected/Selected.css
+++ b/src/Component/Selected/Selected.css
@@ -1,6 +1,8 @@
 .selected-series {
     display: flex;
     margin-left: 20px;
+    align-items: center;
+    justify-content: center;
 }
 
 .selected-series img {
