--- a/src/Component/Serieses/Serieses.css
+++ b/src/Component/Serieses/Serieses.css
@@ -15,4 +15,8 @@
     margin-left: 5px;
     text-align: center;
     color: black;
+    background-color: rgb(179, 243, 222);
+    border-radius: 25px;
+    margin-bottom: 10px;
+    /* border: 1px solid black; */
 }
